Fix overflow on snapshots confirm-dialog

--- a/src/app/pages/common/confirm-dialog/confirm-dialog.component.css
+++ b/src/app/pages/common/confirm-dialog/confirm-dialog.component.css
@@ -16,4 +16,7 @@ h1 {
 
 div.message-content {
     max-height: 300px;
+    overflow-y: auto;
+    overflow-x: unset;
+    word-wrap: break-word;
 }
